--- a/Computers.html
+++ b/Computers.html
@@ -317,7 +317,7 @@
 
 <body>
     <div class="container-fliud background">
-        <nav class="navbar navbar-expand-md">
+        <nav class="navbar navbar-expand-md sticky-top">
             <div class="container-xxl">
                 <a href="index.html" id="top" class="nav-brand nav-logo">
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
@@ -390,12 +390,12 @@
 
                         <div class="col-lg-10 col-md-9 col-sm-8 col-8 cell-phones mt-3">
                             <div class="container-fliud">
-                                <span class="fs-4 text-light">No produts <span class="fw-lighter">(8)</span></span>
+                                <span class="fs-4 text-light">No produts<span class="fw-lighter">(7)</span></span>
                                 <div class="row">
 
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container ">
-                                            <a href="/each-products/tablet1.html"> <img src="image/tablet-1.jpg"
+                                            <a href="/each-products/Apple iPad Pro.html"> <img src="image/tablet-1.jpg"
                                                     class="img-item" alt=""></a>
                                             <h2 class="text-light"> Apple iPad Pro and Keyboard</h2>
                                             <span><strike>$00000</strike><span>-$0000</span></span>
@@ -411,7 +411,7 @@
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
-                                            <a href="/each-products/apple-coloured-laptop.html"><img
+                                            <a href="/each-products/MacBook Pro.html"><img
                                                     src="image/laptop (1).jpeg" class="img-item" alt=""></a>
                                             <h2 class="text-light"> MacBook Pro</h2>
                                             <span><strike>$00000</strike><span>-$0000</span></span>
@@ -419,7 +419,7 @@
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
-                                            <a href="/each-products/HP1.HTML"> <img src="image/laptop-avi (4).jpg"
+                                            <a href="/each-products/Apple M4 Pro.HTML"> <img src="image/laptop-avi (4).jpg"
                                                     class="img-item" alt=""></a>
                                             <h2 class="text-light">Apple M4 Pro</h2>
                                             <span><strike>$00000</strike><span>-$0000</span></span>
@@ -427,7 +427,7 @@
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
-                                            <a href="/each-products/apple-tab.html"> <img src="image/laptops- (5).jpg"
+                                            <a href="/each-products/Microsoft  Laptop.html"> <img src="image/laptops- (5).jpg"
                                                     class="img-item" alt=""></a>
                                             <h2 class="text-light"> Microsoft Surface Laptop 3</h2>
                                             <span><strike>$00000</strike><span>-$0000</span></span>
@@ -435,7 +435,7 @@
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
-                                            <a href="/each-products/hp2.html"> <img src="image/laptops- (6).jpg"
+                                            <a href="/each-products/MacIntel-Core-i5.html"> <img src="image/laptops- (6).jpg"
                                                     class="img-item" alt=""></a>
                                             <h2 class="text-light">Apple MacBook Air 13 Intel Core i5</h2>
                                             <span><strike>$00000</strike><span>-$0000</span></span>
@@ -443,17 +443,9 @@
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
-                                            <a href="/each-products/hp3.html"> <img src="image/laptops- (8).jpg"
+                                            <a href="/each-products/SAMSUNG-Book3-Pro .html"> <img src="image/laptops- (8).jpg"
                                                     class="img-item" alt=""></a>
                                             <h2 class="text-light">SAMSUNG Galaxy Book3 Pro </h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
-                                        <div class="img-container">
-                                            <a href="/each-products/dell-laptop.html"> <img src="image/laptops- (4).jpg"
-                                                    class="img-item" alt=""></a>
-                                            <h2 class="text-light">Samsung Notebook Plus2</h2>
                                             <span><strike>$00000</strike><span>-$0000</span></span>
                                         </div>
                                     </div>
