--- a/Mobile.html
+++ b/Mobile.html
@@ -340,7 +340,7 @@
 
 <body>
     <div class="container-fliud background">
-        <nav class="navbar navbar-expand-md">
+        <nav class="navbar navbar-expand-md sticky-top">
             <div class="container-xxl">
                 <a href="index.html" id="top" class="nav-brand nav-logo">
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
@@ -410,14 +410,14 @@
                         </div>
                         <div class="col-lg-10 col-md-9 col-sm-8 col-8 mt-3">
                             <div class="container-fliud">
-                                <span class="fs-4 text-light">No produts</span>
+                                <span class="fs-4 text-light">No produts(8)</span>
                                 <div class="row">
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5 ">
                                         <div class="img-container">
                                             <a href="/each-products/OPPO Find X7 Ultra.html"> <img
                                                     src="image/oppo amy special.jpg" class="img-item" alt=""></a>
                                             <h2 class="text-light">OPPO Find X7 Ultra</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <span><strike>$210</strike><span>-$204</span></span>
                                         </div>
 
                                     </div>
@@ -426,7 +426,7 @@
                                             <a href="/each-products/OPPO F25 Pro.html"> <img src="image/oppo.jpg"
                                                     class="img-item" alt=""></a>
                                             <h2 class="text-light">OPPO F25 Pro</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <span><span>$259</span></span>
                                         </div>
 
                                     </div>
@@ -435,7 +435,7 @@
                                             <a href="/each-products/Samsung Galaxy A32.html"> <img
                                                     src="images/samsung.jpg" class="img-item" alt=""></a>
                                             <h2 class="text-light"> Samsung Galaxy A32</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <span><strike>$1010</strike><span>-$109.44</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
@@ -443,7 +443,7 @@
                                             <a href="/each-products/Oppo Reno 13 Pro.html"><img
                                                     src="image/PHONE- (1).jpg" class="img-item" alt=""></a>
                                             <h2 class="text-light">Oppo Reno 13 Pro</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <span><strike>$250</strike><span>-$240</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
@@ -451,7 +451,7 @@
                                             <a href="/each-products/Realme 12 X Pro Plus.html"> <img
                                                     src="image/PHONE- (2).jpg" class="img-item" alt=""></a>
                                             <h2 class="text-light">Realme 12 X Pro Plus</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <span><span>-$275.57</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
@@ -459,7 +459,7 @@
                                             <a href="/each-products/Oppo Find N3 Flip.html"> <img
                                                     src="image/PHONE- (5).jpg" class="img-item" alt=""></a>
                                             <h2 class="text-light">Oppo Find N3 Flip</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <span><strike>$230</strike><span>-$225</span></span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
@@ -467,7 +467,7 @@
                                             <a href="/each-products/iPhone 12 pro.html"> <img src="image/PHONE- (7).jpg"
                                                     class="img-item" alt=""></a>
                                             <h2 class="text-light">iPhone 12 pro</h2>
-                                            <span><strike>$00000</strike><span>-$0000</span></span>
+                                            <span>$330</span>
                                         </div>
                                     </div>
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
