--- a/sign-up.html
+++ b/sign-up.html
@@ -114,6 +114,16 @@
       width: 100%;
       border-radius: 20px;
     }
+    .back-home{
+      font-size: 16px;
+      margin-top:10px;
+     display: flex;
+     justify-content: center;
+    }
+    .back-home a {
+      color: rgb(40, 40, 138);
+      text-decoration: none;
+    }
   </style>
 </head>
 
@@ -134,6 +144,7 @@
           <input type="password" placeholder="Comfirm Password" class="form-control form-input" required>
         </div>
         <button class="signup">Signup</button>
+        <p class="back-home"><a href="index.html">Back</a></p>
       </form>
     </div>
   </section>
