--- a/contact.html
+++ b/contact.html
@@ -301,7 +301,7 @@
 
 <body>
     <div class="container-fliud background">
-        <nav class="navbar navbar-expand-md">
+        <nav class="navbar navbar-expand-md sticky-top">
             <div class="container-xxl">
                 <a href="index.html" id="top" class="nav-brand nav-logo">
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
