--- a/shop.html
+++ b/shop.html
@@ -379,7 +379,7 @@
 
 <body>
     <div class="container-fliud background">
-        <nav class="navbar navbar-expand-md">
+        <nav class="navbar navbar-expand-md sticky-top">
             <div class="container-xxl">
                 <a href="index.html" id="top" class="nav-brand nav-logo">
                     <span class="text-light"><span style="color:orange;">Amy</span>Accessory</span>
@@ -450,7 +450,7 @@
                         </div>
                         <div class="col-lg-10 col-md-9 col-sm-8 col-8 mt-3">
                             <div class="container-fliud">
-                                <span class="fs-4 text-light">Produts with set</span>
+                                <span class="fs-4 text-light">Produts with a set</span>
                                 <div class="row">
                                     <div class="col-lg-4 col-md-6 col-sm-12 col-12 mt-5">
                                         <div class="img-container">
