--- a/each-products/Oppo Find N3 Flip.html
+++ b/each-products/Oppo Find N3 Flip.html
@@ -15,250 +15,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Monomakh&family=Roboto+Slab:wght@100..900&display=swap"
         rel="stylesheet">
-    <style>
-        * {
-            margin: 0PX;
-            padding: 0PX;
-        }
-
-        body {
-            font-family: "Monomakh", serif;
-            font-weight: 400;
-        }
-
-        .background {
-            background: black;
-        }
-
-        nav {
-            background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
-        }
-
-        .menu-icon {
-            color: orange;
-        }
-
-        .nav-logo {
-            text-decoration: none;
-            font-size: 25px;
-            font-style: oblique;
-        }
-
-        .nav-list {
-            width: 100%;
-        }
-
-        .a-link {
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .a-link:hover {
-            color: orange;
-            font-size: 18px;
-            text-decoration: underline;
-        }
-
-
-        .ul-list {
-            width: 60%;
-            margin-left: 100px;
-        }
-
-        .nav-icons:hover {
-            color: white;
-        }
-
-        .img-content {
-            padding: 0px 70px;
-        }
-
-        .img-item {
-            height: 500px;
-            width: 100%;
-            object-fit: cover;
-            border-radius: 5px;
-            border: 5px solid orange;
-            background-color: hsla(0, 0%, 100%, 0.59);
-        }
-
-        .redmi-container h4 {
-            display: flex;
-            justify-content: space-around;
-        }
-
-        .redmi-content {
-            height: 600px;
-            margin-top: 20px;
-        }
-
-        .label {
-            display: flex;
-            justify-content: center;
-            margin: 25px 0px;
-        }
-
-        .content p {
-            font-size: 18px;
-            color: rgb(190, 187, 187);
-        }
-
-        .content span {
-            font-size: 20px;
-            color: rgb(190, 187, 187);
-        }
-
-        .cart-button a {
-            color: black;
-            text-decoration: none;
-        }
-
-        .footer-img {
-            background-color: hsla(0, 0%, 50%, 0.169);
-            height: auto;
-            color: lightgrey;
-            width: 100%;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-
-        .footer-header {
-            margin: 50px 30px 0px 30px
-        }
-
-        .footer-list {
-            list-style-type: none;
-            color: lightgrey;
-            line-height: 40px;
-            font-size: 18px;
-            font-weight: lighter;
-        }
-
-        .footer-list2 {
-            margin-top: 40px;
-        }
-
-        .footer-paraghap-list {
-            color: lightgrey;
-            line-height: 40px;
-            width: 80%;
-            margin-left: 20px;
-        }
-
-        .footer-link {
-            color: lightgrey;
-            line-height: 40px;
-            font-size: 18px;
-            font-weight: lighter;
-            text-decoration: none;
-        }
-
-
-        .footer-link:hover {
-            color: orange;
-        }
-
-        .copy-right {
-            display: flex;
-            justify-content: end;
-            font-weight: bold;
-
-        }
-
-        .copy-right-box {
-            height: 80px;
-            margin-top: 50px;
-        }
-
-        @media (max-width:950px) {
-            .img-content {
-                padding: 0px 5px;
-            }
-        }
-
-        @media (max-width:780px) {
-            .footer-list {
-                line-height: 30px;
-                font-size: 16px;
-            }
-
-            .footer-paraghap-list {
-                line-height: 30px;
-            }
-
-            .footer-link {
-                line-height: 30px;
-                font-size: 16px;
-            }
-
-            .img-content {
-                padding: 0px 50px;
-            }
-
-            .footer-header {
-                font-size: 20px;
-                margin-top: 20px;
-            }
-        }
-
-        @media (max-width:765px) {
-
-            .footer-link {
-                line-height: 27px;
-                font-size: 16px;
-            }
-
-            .footer-header {
-                font-size: 18px;
-                font-weight: bolder;
-                margin-top: 15px;
-            }
-
-            .footer-list2 {
-                margin-top: 10px;
-            }
-
-            .img-item {
-                height: 400px;
-            }
-        }
-
-        @media (max-width:400px) {
-            .footer-list {
-                line-height: 25px;
-                font-size: 14px;
-            }
-
-            .footer-paraghap-list {
-                line-height: 25px;
-            }
-
-            .footer-link {
-                line-height: 25px;
-                font-size: 14px;
-            }
-
-            .footer-header {
-                font-size: 18px;
-                font-weight: bolder;
-                margin-top: 15px;
-            }
-
-            .footer-list2 {
-                margin-top: 12px;
-            }
-
-            .img-item {
-                height: 350px;
-            }
-
-            .img-content {
-                padding: 0px 20px;
-            }
-        }
-    </style>
+  <link rel="stylesheet" href="/index.css">
 </head>
 
 <body>
