--- a/each-products/OPPO Find X7 Ultra.html
+++ b/each-products/OPPO Find X7 Ultra.html
@@ -15,240 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <style>
-        * {
-            margin: 0PX;
-            padding: 0PX;
-        }
-
-        body {
-            font-family: "Monomakh", serif;
-            font-weight: 400;
-            font-style: normal;
-        }
-
-        .background {
-            /* background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791)); */
-            background: black;
-        }
-
-        nav {
-            background-image: linear-gradient(to left, hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(240, 100%, 50%, 0.811), hsla(0, 0%, 0%, 0.791));
-        }
-
-        .menu-icon {
-            color: orange;
-        }
-
-        .nav-logo {
-            text-decoration: none;
-            font-size: 25px;
-            font-style: oblique;
-        }
-
-        .nav-list {
-            width: 100%;
-        }
-
-        .a-link {
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .a-link:hover {
-            color: orange;
-            font-size: 18px;
-            text-decoration: underline;
-        }
-
-
-        .ul-list {
-            width: 60%;
-            margin-left: 100px;
-        }
-
-        .nav-icons:hover {
-            color: white;
-        }
-        .img-content{
-            padding:0px 70px;
-        }
-
-        .img-item {
-            height: 500px;
-            width: 100%;
-            object-fit: cover;
-            border-radius: 5px;
-            border: 5px solid orange;
-            background-color: hsla(0, 0%, 100%, 0.59);
-        }
-
-        .redmi-container h4 {
-            display: flex;
-            justify-content: space-around;
-        }
-
-        .redmi-content {
-            height: 600px;
-            margin-top: 20px;
-        }
-        .label {
-            display: flex;
-            justify-content: center;
-            margin: 25px 0px;
-        }
-        .content p{
-          font-size:18px;
-          color:rgb(190, 187, 187);
-        }
-        .content span{
-            font-size: 20px;
-            color: rgb(190, 187, 187);
-        }
-        .cart-button a{
-            color: black;
-            text-decoration: none;
-        }
-        .footer-img {
-            background-color: hsla(0, 0%, 50%, 0.169);
-            height: auto;
-            color: lightgrey;
-            width: 100%;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-
-        .footer-header {
-            margin: 50px 30px 0px 30px
-        }
-
-        .footer-list {
-            list-style-type: none;
-            color: lightgrey;
-            line-height: 40px;
-            font-size: 18px;
-            font-weight: lighter;
-        }
-
-        .footer-list2 {
-            margin-top: 40px;
-        }
-
-        .footer-paraghap-list {
-            color: lightgrey;
-            line-height: 40px;
-            width: 80%;
-            margin-left: 20px;
-        }
-
-        .footer-link {
-            color: lightgrey;
-            line-height: 40px;
-            font-size: 18px;
-            font-weight: lighter;
-            text-decoration: none;
-        }
-
-
-        .footer-link:hover {
-            color: orange;
-        }
-
-        .copy-right {
-            display: flex;
-            justify-content: end;
-            font-weight: bold;
-
-        }
-
-        .copy-right-box {
-            height: 80px;
-            margin-top: 50px;
-        }
-        @media (max-width:950px) {
-            .img-content{
-            padding:0px 5px;
-        } }
-        @media (max-width:780px) {
-            .footer-list {
-                line-height: 30px;
-                font-size: 16px;
-            }
-
-            .footer-paraghap-list {
-                line-height: 30px;
-            }
-
-            .footer-link {
-                line-height: 30px;
-                font-size: 16px;
-            }
-            .img-content{
-            padding:0px 50px;
-        }
-            .footer-header {
-                font-size: 20px;
-                margin-top: 20px;
-            }
-        }
-
-        @media (max-width:765px) {
-
-            .footer-link {
-                line-height: 27px;
-                font-size: 16px;
-            }
-
-            .footer-header {
-                font-size: 18px;
-                font-weight: bolder;
-                margin-top: 15px;
-            }
-
-            .footer-list2 {
-                margin-top: 10px;
-            }
-
-            .img-item {
-                height: 400px;
-            }
-        }
-
-        @media (max-width:400px) {
-            .footer-list {
-                line-height: 25px;
-                font-size: 14px;
-            }
-
-            .footer-paraghap-list {
-                line-height: 25px;
-            }
-
-            .footer-link {
-                line-height: 25px;
-                font-size: 14px;
-            }
-
-            .footer-header {
-                font-size: 18px;
-                font-weight: bolder;
-                margin-top: 15px;
-            }
-
-            .footer-list2 {
-                margin-top: 12px;
-            }
-
-            .img-item {
-                height: 350px;
-            }
-            .img-content{
-            padding:0px 20px;
-        }
-        }
-    </style>
+    <link rel="stylesheet" href="/index.css">
 </head>
 
 <body>
